<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    TODO: add recipe menu item, rename folders to recipes-->
    <item
        android:id="@+id/foldersFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/folders_menu" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_menu" />

    <item
        android:id="@+id/shoppingFragment"
        android:icon="@drawable/ic_icons8_shopping_cart_24"
        android:title="@string/shopping_menu" />

    <item
        android:id="@+id/recipeAddFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_menu" />

</menu>