<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RecipeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.cs683.culinarian.viewmodels.RecipeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@{viewModel.recipe.recipe.recipeName}" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:rating="@{viewModel.recipe.recipe.recipeRating}"
                android:stepSize="1.0"/>

            <!--        TODO: Add functionality, organize with constraints-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:text="@string/edit_button"
                    android:onClick="@{() -> viewModel.editClicked()}"/>
                <Button
                    android:id="@+id/folderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:text="@string/folder_button"
                    android:onClick="@{() -> viewModel.foldersClicked()}"/>
                <Button
                    android:id="@+id/shoppingListButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:text="@string/add_shopping_button"
                    android:onClick="@{() -> viewModel.addAllToCart()}"/>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:overScrollMode="never"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/instructions_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instruction_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:overScrollMode="never"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
