<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RecipeEditFragment">

    <data>
        <variable
            name="viewModel"
            type="com.cs683.culinarian.viewmodels.RecipeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@={viewModel.recipe.recipe.recipeName}"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/submit_button"
                app:icon="@android:drawable/ic_menu_send"
                android:onClick="@{() -> viewModel.submitClicked()}"
                app:layout_constraintEnd_toStartOf="@+id/cancelButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancelButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:text="@string/cancel_button"
                app:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:onClick="@{() -> viewModel.cancelClicked()}"
                app:layout_constraintEnd_toStartOf="@+id/deleteRecipeButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/submitButton"
                app:layout_constraintTop_toTopOf="@+id/deleteRecipeButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteRecipeButton"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/delete_button"
                app:icon="@android:drawable/ic_menu_delete"
                android:onClick="@{() -> viewModel.deleteRecipe()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

            <TextView
                android:id="@+id/ingredientsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_header"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteRecipeButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsHeader" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredientInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_hint"
                app:layout_constraintEnd_toStartOf="@+id/addIngredientButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_list">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredientInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.ingredientInput}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addIngredientButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:onClick="@{() -> viewModel.addIngredient()}"
                app:icon="@android:drawable/ic_input_add"
                app:layout_constraintBottom_toBottomOf="@+id/ingredientInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ingredientInputLayout" />

            <TextView
                android:id="@+id/instructionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_header"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientInputLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instruction_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionHeader" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instructionInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_weight="1"
                android:hint="@string/instruction_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addInstructionButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction_list">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instructionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.instructionInput}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addInstructionButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:icon="@android:drawable/ic_input_add"
                android:onClick="@{() -> viewModel.addInstruction()}"
                app:layout_constraintBottom_toBottomOf="@+id/instructionInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/instructionInputLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>